Fixed horizontal scroll for multiple lists

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,8 +32,9 @@
     max-height: 85%;
   }
 
-  .list-wrapper-height {
+  .list-wrapper {
     height: min-content;
-    max-height: 100%;
+    max-height: 95%;
+    min-width: 320px;
   }
 }
